<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">CLEAR</string>
    <string name="_8">8</string>
    <string name="divide">/</string>
    <string name="about_us">About Us</string>
    <string name="our_blog">Our Blog</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="x">X</string>
    <string name="_2">2</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_divide">/</string>
    <string name="_multiply">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_equals">=</string>
    <string name="_dot">.</string>
    <string name="error">Error</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
