<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/back"
    >


    <TextView
        android:id="@+id/edt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minLines="2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="80sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btn_clear"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_above="@+id/btn_seven"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

   <Button
       android:id="@+id/btn_seven"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/btn_four"
       android:layout_alignParentStart="true"
       android:layout_marginBottom="11dp"
       android:background="@android:color/holo_blue_light"
       android:text="@string/_7"
       android:textColor="@android:color/white"
       android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_eight"
        android:text="@string/_8"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_below="@+id/btn_clear"
        android:layout_alignStart="@+id/btn_five" />

   <Button
       android:id="@+id/btn_nine"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_clear"
       android:layout_marginStart="13dp"
       android:layout_toEndOf="@+id/btn_eight"
       android:background="@android:color/holo_blue_light"
       android:text="@string/_9"
       android:textColor="@android:color/white"
       android:textSize="30sp" />

   <Button
       android:id="@+id/btn_divide"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_clear"
       android:layout_marginStart="15dp"
       android:layout_toEndOf="@+id/btn_nine"
       android:background="@android:color/holo_blue_light"
       android:text="@string/divide"
       android:textColor="@android:color/white"
       android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_four"
        android:text="@string/_4"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/btn_five"
        android:layout_alignBottom="@+id/btn_five"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_five"
        android:text="@string/_5"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/btn_two"
        android:layout_alignStart="@+id/btn_two" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_five"
        android:layout_alignBottom="@+id/btn_five"
        android:layout_alignStart="@+id/btn_nine"
        android:background="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:text="@string/_6"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

   <Button
       android:id="@+id/btn_multiply"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/btn_six"
       android:layout_alignBottom="@+id/btn_six"
       android:layout_alignStart="@+id/btn_divide"
       android:background="@android:color/holo_blue_light"
       android:text="@string/x"
       android:textColor="@android:color/white"
       android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_one"
        android:text="@string/_1"
        android:textSize="30sp"

        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/btn_two"
        android:layout_alignBottom="@+id/btn_two"
        android:layout_alignParentStart="true" />

   <Button
       android:id="@+id/btn_two"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/btn_three"
       android:layout_alignBottom="@+id/btn_three"
       android:layout_marginStart="14dp"
       android:layout_toEndOf="@+id/btn_one"
       android:background="@android:color/holo_blue_light"
       android:text="@string/_2"
       android:textColor="@android:color/white"
       android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:id="@+id/btn_three"
        android:layout_marginBottom="86dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_six" />

   <Button
       android:id="@+id/btn_minus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignStart="@+id/btn_multiply"
       android:layout_alignTop="@+id/btn_three"
       android:background="@android:color/holo_blue_light"
       android:text="@string/minus"
       android:textColor="@android:color/white"
       android:textSize="35sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/btn_dot"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/btn_zero"
        android:layout_alignBottom="@+id/btn_zero"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_equal"
        android:layout_alignBottom="@+id/btn_equal"
        android:layout_alignStart="@+id/btn_two"
        android:background="@android:color/holo_blue_light"
        android:text="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

   <Button
       android:id="@+id/btn_equal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_two"
       android:layout_marginTop="13dp"
       android:layout_toStartOf="@+id/btn_divide"
       android:background="@android:color/holo_blue_light"
       android:text="@string/equal"
       android:textColor="@android:color/white"
       android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/btn_plus"
        android:textSize="30sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/btn_equal"
        android:layout_alignBottom="@+id/btn_equal"
        android:layout_alignStart="@+id/btn_minus" />


</RelativeLayout>